<resources>
    <string name="welcome">Welcome to Friend Finder!</string>
    <string name="registerpage">Register for Friend Finder</string>
    <string name="loginpage">Log in to Friend Finder</string>
    <string name="connectionpage">Message a new friend!</string>
    <string name="myprofilepage">Your Profile</string>
    <string name="swipingpage">Find New Friends!</string>
    <string name="app_name">Friend Finder</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="Messages">Connections</string>
    <string name="swipe">Find Friends</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="back">Back</string>
    <string name="username">Enter Username</string>
    <string name="password">Enter Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="bio">Bio:</string>
    <string name="hometown">Hometown:</string>
    <string name="school">School:</string>
    <string name="major">Major:</string>
    <string name="plus">+</string>
    <string name="chat">Chat</string>
    <string name="user1">Mike</string>
    <string name="user2">Dominique</string>
    <string name="user3">Jen</string>
    <string name="user4">Jonah</string>
    <string name="user5">Wilhelm</string>
    <string name="user6">Norman</string>
    <string name="user7">Carl</string>
    <string name="user8">Patricia</string>
    <string name="user9">Wendy</string>
    <string name="user10">Brooklyn</string>
    <string name="user11">Bjorn</string>
    <string name="user12">Indiana</string>
    <string name="user13">Brian</string>
    <string name="textview">TextView</string>

</resources>
