<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Connections">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="410dp"
        android:layout_height="544dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user1" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user2" />

                <Button
                    android:id="@+id/button1"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user3" />

                <Button
                    android:id="@+id/button2"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user4" />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user5" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user6" />

                <Button
                    android:id="@+id/button5"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user7" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user8" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user9" />

                <Button
                    android:id="@+id/button8"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user10" />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user11" />

                <Button
                    android:id="@+id/button10"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user12" />

                <Button
                    android:id="@+id/button11"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="96dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="78dp"
                    android:layout_height="47dp"
                    android:layout_weight="1"
                    android:text="@string/user13" />

                <Button
                    android:id="@+id/button12"
                    android:layout_width="59dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/chat" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="315dp"
        android:layout_marginBottom="8dp"
        android:onClick="goback"
        android:text="@string/back"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>